Implementing preprocess function

--- a/finalAssignment.ipynb
+++ b/finalAssignment.ipynb
@@ -1,31 +1,15 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "LcNWnBpXegy9"
+      },
       "source": [
         "<h1>Final Assignment</h1>\n",
         "<h2>Task: Text Generation</h2>\n",
         "<h2>Submitted by: Mainuddin Alam Irteja</h2>"
-      ],
-      "metadata": {
-        "id": "LcNWnBpXegy9"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -41,6 +25,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_0MmbrRFnFeu"
+      },
+      "outputs": [],
       "source": [
         "# Loading FLAN-T5 model\n",
         "\n",
@@ -52,15 +41,15 @@
         "modelName = \"google/flan-t5-small\"\n",
         "tokenizer = AutoTokenizer.from_pretrained(modelName)\n",
         "model = AutoModelForSeq2SeqLM.from_pretrained(modelName)"
-      ],
-      "metadata": {
-        "id": "_0MmbrRFnFeu"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Aphif3TWGsLn"
+      },
+      "outputs": [],
       "source": [
         "# Transfer the model so that the gpu is being used\n",
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
@@ -68,15 +57,15 @@
         "\n",
         "# Print out which device we're using (GPU or CPU)\n",
         "print(device)"
-      ],
-      "metadata": {
-        "id": "Aphif3TWGsLn"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "gYiR0KEO9AoK"
+      },
+      "outputs": [],
       "source": [
         "# Load the WikiText-103 dataset\n",
         "from datasets import load_dataset\n",
@@ -87,15 +76,15 @@
         "split_Dataset = wiki_Dataset.train_test_split(test_size=0.2)\n",
         "train_Dataset = split_Dataset['train']\n",
         "test_Dataset = split_Dataset['test']"
-      ],
-      "metadata": {
-        "id": "gYiR0KEO9AoK"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "SEEydayKzb8U"
+      },
+      "outputs": [],
       "source": [
         "# Preprocessing the dataset\n",
         "\n",
@@ -127,21 +116,32 @@
         "\n",
         "  # Return the preprocessed model inputs\n",
         "  return model_inputs"
-      ],
-      "metadata": {
-        "id": "SEEydayKzb8U"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "lMZIhTu86SkP"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
