--- a/finalProject.ipynb
+++ b/finalProject.ipynb
@@ -15,7 +15,7 @@
         "id": "LcNWnBpXegy9"
       },
       "source": [
-        "<h1>Final Assignment</h1>\n",
+        "<h1>Final Project</h1>\n",
         "<h2>Task: Text Summarization</h2>\n",
         "<h2>Submitted by: Mainuddin Alam Irteja</h2>\n"
       ]
